err/plone.app.changeownership.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plone'...
Listing './lib/python3.5/site-packages/plone/app'...
Listing './lib/python3.5/site-packages/plone/app/changeownership'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/Extensions'...
Compiling './lib/python3.5/site-packages/plone/app/changeownership/change_owner.py'...
***   File "./lib/python3.5/site-packages/plone/app/changeownership/change_owner.py", line 179
    raise KeyError, 'Only retrievable users in this site can be made owners.'
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plone/app/changeownership/locales'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/it'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/nl'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/zh_CN'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/locales/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/profiles'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/profiles/default'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/profiles/uninstall'...
Listing './lib/python3.5/site-packages/plone/app/changeownership/tests'...
Listing './lib/python3.5/site-packages/plone.app.changeownership-0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
